# rad1

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
rad1/: Cargo.toml
rad1-cli/: Cargo.toml
rad1-cli/src/: command.rs  main.rs
rad1-cli/src/command/: analyze.rs  play.rs
rad1-cli/tests/: version-numbers.rs
rad1-parsing/: Cargo.toml
rad1-parsing/src/: main.rs
rad1-tuning/: Cargo.toml  out.json
rad1-tuning/src/: eval.rs  main.rs
rad1-tuning/src/eval/: config.rs
rad1/src/: agent.rs  eval.rs  lib.rs  move_hash.rs  node.rs  tt.rs
rad1/src/agent/: ab.rs  cli.rs  random.rs
rad1/src/eval/: naive.rs
src/: agent.rs  command.rs  eval.rs  game.rs  hash.rs  lib.rs  main.rs  move_sorter.rs  tt.rs
src/agent/: ab.rs  cli.rs  mcts.rs  naive.rs  random.rs  uci.rs
src/agent/naive/: eval.rs
src/command/: analyze.rs  play.rs
