[package]
name = "rad1"
version = "0.1.0"
authors = ["Sam Foster <slfotg@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11.0"
chess = "3.2.0"
clap = "2.33.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
rand = "0.8.3"
vampirc-uci = {version = "0.11", features = ["chess"]}

[dev-dependencies]
test-case = "1.1.0"