[package]
name = "rad1-tuning"
version = "0.2.1"
authors = ["Sam Foster <slfotg@gmail.com>"]
description = "Evaluation tuning for rad1"
edition = "2018"

[dependencies]
ansi_term = "0.11.0"
chess = "3.2.0"
clap = "2.33.3"
itertools = "0.10.1"
lazy_static = "1.4.0"
rad1 = { version = "0.2.1", path = "../rad1" }
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
